<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".alarm.AlarmFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"

        app:navigationIcon="@drawable/arrow_back_24px"
        app:title="@string/alarm_fragment_heading"
        app:titleTextAppearance="@style/toolbarStyleText2"
        app:titleTextColor="@color/white"
        android:background="@color/dark_blue"

        app:menu="@menu/alarms_menu"

        />



    <TimePicker
        android:id="@+id/time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"

        android:background="@color/secondaryLightColor"


        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_picker"
        android:layout_marginTop="20dp"
        >

        <ImageView
            android:id="@+id/volume_mute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/volume_mute_24px"
            android:contentDescription="Muted"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"

            />


        <com.google.android.material.slider.Slider
            android:id="@+id/volume_slider"
            android:valueFrom="0.0"
            android:valueTo="100.0"
            android:stepSize="10.0"
            android:value="50.0"

            android:layout_width="200dp"
            android:layout_height="wrap_content"


            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/volume_mute"

            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/volume_up_24px"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/volume_slider"

            />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/vibration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="Volume up"

        android:text="@string/vibration_label"
        android:fontFamily="@font/font"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_switches"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout"
        />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/morning_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/morning_test_label"
        android:fontFamily="@font/font"
        android:textColor="@color/white"

        android:textSize="@dimen/text_size_switches"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vibration"
        />



    <Button
        android:id="@+id/set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_label_set_alarm"
        style="@style/Widget.MaterialComponents.Button"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/morning_test"

        android:backgroundTint="@color/secondaryColor"
        />





</androidx.constraintlayout.widget.ConstraintLayout>