<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".statistics.StatisticsFragment"

    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"

        app:navigationIcon="@drawable/arrow_back_24px"
        app:title="@string/statistics_fragment_heading"
        app:titleTextAppearance="@style/toolbarStyleText2"

        app:titleTextColor="@color/white"
        android:background="@color/dark_blue"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progress"

                app:trackColor="@color/grey"

                app:trackThickness="20dp"
                app:indicatorSize="200dp"
                app:trackCornerRadius="8dp"

                android:rotation="180"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="20dp"

                />


            <TextView
                android:id="@+id/duration"
                android:textSize="24dp"
                android:text="@string/unknown"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintLeft_toLeftOf="@id/progress"
                app:layout_constraintRight_toRightOf="@id/progress"
                app:layout_constraintTop_toTopOf="@id/progress"
                app:layout_constraintBottom_toBottomOf="@id/progress"

                android:textColor="@color/white"
                android:fontFamily="@font/font"
                />

            <TextView
                android:id="@+id/date"
                android:textSize="18dp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintLeft_toLeftOf="@id/duration"
                app:layout_constraintRight_toRightOf="@id/duration"
                app:layout_constraintTop_toBottomOf="@id/duration"

                android:textColor="@color/white"
                android:fontFamily="@font/font"
                />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bedtime_24px"

                app:layout_constraintLeft_toLeftOf="@id/progress"
                app:layout_constraintRight_toRightOf="@id/progress"
                app:layout_constraintBottom_toTopOf="@id/duration"
                />

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/progress"

                android:padding="20dp"
                android:layout_margin="20dp"

                android:textColor="@color/black"
                android:fontFamily="@font/font"
                />


            <com.example.deepsleep.statistics.SleepingLine
                android:id="@+id/sleeping_line"
                android:layout_width="match_parent"
                android:layout_height="100dp"

                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/message"
                />

            <TextView
                android:id="@+id/average_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sleeping_line"
                android:layout_marginLeft="20dp"

                android:textColor="@color/white"
                android:textSize="20dp"
                android:text="@string/avg_label"
                android:fontFamily="@font/font"
                />
            <TextView
                android:id="@+id/average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintLeft_toRightOf="@id/average_label"
                app:layout_constraintBottom_toBottomOf="@id/average_label"
                android:layout_marginLeft="5dp"

                android:textColor="@color/white"
                android:textSize="20dp"
                android:fontFamily="@font/font"
                />


            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/bar_chart"
                android:layout_width="match_parent"
                android:layout_height="300dp"

                app:layout_constraintTop_toBottomOf="@id/average"

                android:layout_marginTop="20dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"

                app:layout_constraintTop_toBottomOf="@id/bar_chart"
                />



        </androidx.constraintlayout.widget.ConstraintLayout>




    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>


